@@ -26,7 +26,10 @@ Version NEXT
 	Upload starting at zero position are now always allowed no matter if
 	  source port was reused or not. Old code did that but not over
 	  server restarts.
-	INFO file updated with fresh information  
+	INFO file updated with fresh information
+	fsetupcmd - reject port number > 65535
+	fsetupcmd - code cleaned a bit. Error message is now
+	  fsetup: No host given! instead of fhost:
 
 Version 2.8.1b25 - 10 Sep 2009
 	GNU autotools build system was entirely replaced by SCons
